# ai-conversations-with-spin-and-fermyon-cloud

./: Cargo.toml  README.md  spin.toml
src/: conversation.rs  lib.rs  prompt.rs
