[package]
name = "ai-live"
authors = ["Thorsten Hans <thorsten.hans@gmail.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1"
http = "0.2"
markdown = "0.3.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v2.0.0" }
uuid = { version = "1.6.1", features = ["v4"] }

[workspace]
